Refs #119540 changed the following: - eea-theme-critical.scss:   - no longer hide publishDate separator, now   it will be hidden by template condition

--- a/eea/design/skins/eeadesign_styles/eea-theme-critical.scss
+++ b/eea/design/skins/eeadesign_styles/eea-theme-critical.scss
@@ -96,7 +96,6 @@
   }
 
   .documentByLine .portalType,
-  .publishDate .byline-separator,
   .documentByLineAuthors,
   .content-header-body #themes-tags {
     display: none;
